# tpc-fee-sim

./: .gitignore  CMakeLists.txt  README.md
CRU/: CMakeLists.txt  CRU 12FEC 8DDL.cpp  CRU 12FEC 8DDL.h  CRU.cpp  CRU.h  CRUMonitor.cpp  CRUMonitor.h  CRU_12FEC_PCIe_waitforPadrow.cpp  CRU_12FEC_PCIe_waitforPadrow.h  CRU_16FEC_PCIe.cpp  CRU_16FEC_PCIe.h  DataGenerator.cpp  DataGenerator.h  DataGenerator_BlackEvents_readdressed.cpp  DataGenerator_BlackEvents_readdressed.h  DataGenerator_blackEvents.cpp  DataGenerator_blackEvents.h  DataGenerator_gauss.cpp  DataGenerator_gauss.h  GBT.cpp  GBT.h  GlobalConstants.h  Makefile  Mapping.csv  Packet.cpp  Packet.h  RandomGenerator.cpp  RandomGenerator.h  SAMPA.cpp  SAMPA.h  SAMPAMonitor.cpp  SAMPAMonitor.h  Sample.cpp  Sample.h  Signal.cpp  Signal.h  main.cpp
SAMPA/: CMakeLists.txt  CRU.cpp  CRU.h  Channel.cpp  Channel.h  DataGenerator.cpp  DataGenerator.h  GBT.cpp  GBT.h  GlobalConstants.h  Graph.cpp  Graph.h  Huffman.cpp  Huffman.h  Mapper.cpp  Mapper.h  Monitor.cpp  Monitor.h  Packet.cpp  Packet.h  Pileup.cpp  RandomGenerator.cpp  RandomGenerator.h  SAMPA.cpp  SAMPA.h  Sample.h  main.cpp
cmake/: FindAliRoot.cmake  FindSystemC.cmake
generator/: CMakeLists.txt  ChannelMerger.cxx  ChannelMerger.h  CollisionDistribution.cxx  CollisionDistribution.h  DataGenerator.cxx  DataGenerator.h  GeneratorTF.cxx  GeneratorTF.h  NoiseGenerator.cxx  NoiseGenerator.h  README.md  create-pedestal-configuration.C  create-systemc-input.C  run-compression-evaluation.C  timeframes_from_raw.C
macros/: plot-huffman-statistics.C  write-tpc-altro-mapping.C
